--- a/views/edit_profile.ejs
+++ b/views/edit_profile.ejs
@@ -20,6 +20,7 @@
             <ul>
                 <a href="/"><li>ホーム</li></a>
                 <a href="/dashboard"><li>ダッシュボード</li></a>
+                <a href="/project/projects"><li>プロジェクト一覧</li></a>
                 <a href="/task/tasks"><li>タスク一覧</li></a>
                 <a href="/profile?uid=<%= userID %>"><li>マイページ</li></a>
                 <a href="/login/logout"><li>ログアウト</li></a>
