--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -72,7 +72,7 @@
             </div>
 
             <div class="section">
-                <h2>自分に割り当てられたタスク一覧 (responsible)</h2>
+                <h2>自分のタスク一覧 (responsible)</h2>
                 <% if(responsibleTask && responsibleTask.length > 0) { %>
                 <table id="taskTable">
                     <thead>
@@ -116,7 +116,7 @@
             </div>
 
             <div class="section">
-                <h2>自分に割り当てられたタスク一覧 (accountable)</h2>
+                <h2>自分のタスク一覧 (accountable)</h2>
                 <% if(accountableTask && accountableTask.length > 0) { %>
                 <table id="taskTable">
                     <thead>
@@ -160,7 +160,7 @@
             </div>
 
             <div class="section">
-                <h2>自分に割り当てられたタスク一覧 (consulted)</h2>
+                <h2>自分のタスク一覧 (consulted)</h2>
                 <% if(consultedTask && consultedTask.length > 0) { %>
                 <table id="taskTable">
                     <thead>
@@ -204,7 +204,7 @@
             </div>
 
             <div class="section">
-                <h2>自分に割り当てられたタスク一覧 (informed)</h2>
+                <h2>自分のタスク一覧 (informed)</h2>
                 <% if(informedTask && informedTask.length > 0) { %>
                 <table id="taskTable">
                     <thead>
